# cookiecutter-python-package

./: COPYING.md  README.md  cookiecutter.json  local_extensions.py  requirements-dev.txt
.github/: python-project-template.yml
.github/workflows/: ci.yml  pypi.yml  sync-template.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  test_bake_project.py  test_deploy_bake.py  test_pypi_release.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  pypi.yml
{{cookiecutter.project_slug}}/doc/: api.rst  conf.py  demo.nblink  index.rst
{{cookiecutter.project_slug}}/notebooks/: demo.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.__modname}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.__modname}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
